src-tauri/src/bin/ifai/snapshots/ifai__session_archive_snapshot_test__tests__snapshot_session_summary_basic.snap
---
source: src/bin/ifai/session_archive_snapshot_test.rs
expression: content
---
# Session Summary

**Date**: 2026-05-09 18:19:26 UTC
**Model**: openai-official/gpt-4
**Tokens**: 1000 input + 500 output = 1500 total

## Conversation

### 👤 User

AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
