src-tauri/src/bin/ifai/snapshots/ifai__session_archive_snapshot_test__tests__snapshot_session_summary_empty.snap
---
source: src/bin/ifai/session_archive_snapshot_test.rs
expression: content
---
# Session Summary

**Date**: 2026-05-09 18:19:26 UTC
**Model**: deepseek-official/deepseek-chat
**Tokens**: 0 input + 0 output = 0 total

## Conversation

---

*This session summary was automatically generated.*
