src-tauri/src/bin/ifai/snapshots/ifai__session_archive_snapshot_test__tests__snapshot_session_summary_with_tools.snap
---
source: src/bin/ifai/session_archive_snapshot_test.rs
expression: content
---
# Session Summary

**Date**: 2026-05-09 18:19:26 UTC
**Model**: openai-official/gpt-4
**Tokens**: 300 input + 200 output = 500 total

## Conversation

### 👤 User

请帮我读取当前目录的文件

### 🤖 Assistant

我来帮你读取当前目录的文件。

---

*This session summary was automatically generated.*
